@@ -16,5 +16,6 @@
     <string name="title_activity_soft_button_edit">Edit SoftButton</string>
     <string name="delete_icon_desc">Delete icon</string>
     <string name="softbutton_id">Id:</string>
+    <string name="dialNumber_phoneNumber">Phone Number:</string>
     
 </resources>
